Upload final version pending changes from User testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,32 +25,32 @@ p {
 	box-shadow: 2px black;
 }
 
-#text9AM {
+#hour9AM {
 	border-radius: 5px;
 }
 
-#text10AM {
+#hour10AM {
 	border-radius: 5px;
 }
-#text11AM {
+#hour11AM {
 	border-radius: 5px;
 }
-#text12AM {
+#hour12AM {
 	border-radius: 5px;
 }
-#text1PM {
+#hour1PM {
 	border-radius: 5px;
 }
-#text2PM {
+#hour2PM {
 	border-radius: 5px;
 }
-#text3PM {
+#hour3PM {
 	border-radius: 5px;
 }
-#text4PM {
+#hour4PM {
 	border-radius: 5px;
 }
-#text5PM {
+#hour5PM {
 	border-radius: 5px;
 }
 
